--- a/templates/dashboard_base.html
+++ b/templates/dashboard_base.html
@@ -170,7 +170,7 @@
                         </a>
                         <ul class="treeview-menu">
                             <li><a href="#"><i class="fa fa-angle-double-right orange"></i> Flervalgsspørsmål</a></li>
-                            <li><a href="#"><i class="fa fa-angle-double-right orange"></i> Tilbakemeldingsskjema</a></li>
+                            <li><a href="/dashboard/feedback/"><i class="fa fa-angle-double-right orange"></i> Tilbakemeldingsskjema</a></li>
                         </ul>
                     </li>
                     {% endif %}
