--- a/templates/feedback/dashboard/details.html
+++ b/templates/feedback/dashboard/details.html
@@ -34,8 +34,8 @@ Tilbakemeldingsskjema
 <div class="row">
     <div class ="col-md-12">
         <a href="#" id="feedback-add-textquestion" class="btn btn-primary"><i class="fa fa-plus"></i> Legg til tekstspørsmål</a>
-        <a href="#" id="feedback-add-ratingquestion" class="btn btn-primary"><i class="fa fa-plus"></i> Legg til rating spørsmål</a>
-        <a href="#" id="feedback-add-mcquestion" class="btn btn-primary"><i class="fa fa-plus"></i> Legg til rating spørsmål</a>
+        <a href="#" id="feedback-add-ratingquestion" class="btn btn-primary"><i class="fa fa-plus"></i> Legg til ratingspørsmål</a>
+        <a href="#" id="feedback-add-mcquestion" class="btn btn-primary"><i class="fa fa-plus"></i> Legg til flervalgsspørsmål</a>
     </div>
     <div class="col-md-12" style="display:none" id="feedback-add-textquestion-form">
         <hr />
