--- a/templates/dashboard_base.html
+++ b/templates/dashboard_base.html
@@ -169,8 +169,8 @@
                             <i class="fa fa-angle-down pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="#"><i class="fa fa-angle-double-right orange"></i> Flervalgsspørsmål</a></li>
                             <li><a href="/dashboard/feedback/"><i class="fa fa-angle-double-right orange"></i> Tilbakemeldingsskjema</a></li>
+                            <li><a href="/dashboard/feedback/multiplechoice"><i class="fa fa-angle-double-right orange"></i> Flervalgsspørsmål</a></li>
                         </ul>
                     </li>
                     {% endif %}
